<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.massey.fjy.photogallery.ui.ImageDetailActivity">
<<<<<<< HEAD
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
=======
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always" />

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="100"
        android:showAsAction="always" />


>>>>>>> origin/master
</menu>
