<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="400dp"
    android:minHeight="400dp"
    android:padding="10dp">
    <EditText
        android:id="@+id/dialog_edit_note"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/dialog_edit_editText_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:gravity="start|top"
        android:padding="@dimen/dialog_edit_editText_padding"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        android:background="@color/dark_grey"
        android:layout_above="@+id/view" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/dialog_edit_buttons"
        android:background="@color/dark_grey"
        android:id="@+id/view" />
    <LinearLayout
        android:id="@+id/dialog_edit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="end|bottom"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/cancel"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/dark_grey" />

        <Button
            android:id="@+id/clear"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/action_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/dark_grey" />
        <Button
            android:id="@+id/save"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</RelativeLayout>